analytics added the global snippet

--- a/blogSlack.html
+++ b/blogSlack.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167239185-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-167239185-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Qué es Slack?</title>
@@ -20,6 +31,7 @@
     
     </style> -->
 </head>
+
 <body>
     <header class="Header">
         <figure class="Header__figure">
@@ -40,7 +52,8 @@
                 <li class="Header__menu-li Header__open-submenu">
                     <a href="" class="Header__menu-a no-link">CURSOS</a>
                     <ul class="Header__submenu">
-                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="curso.html">HTML,CSS,JS</a></li>
+                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="curso.html">HTML,CSS,JS</a>
+                        </li>
                         <li class="Header__submenu-li title">
                             <a class="Header__submenu-a no-link" href="">WEBPACK</a>
                             <span class="titletext">PROXIMAMENTE</span>
@@ -49,7 +62,8 @@
                             <a class="Header__submenu-a no-link" href="">NODEJS</a>
                             <span class="titletext">PROXIMAMENTE</span>
                         </li>
-                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="index.html#scrollLink1">TODOS</a></li>
+                        <li class="Header__submenu-li"><a class="Header__submenu-a"
+                                href="index.html#scrollLink1">TODOS</a></li>
                     </ul>
                 </li>
                 <li class="Header__menu-li">
@@ -79,7 +93,8 @@
                 <figure>
                     <img src="img/slack1blog.png" alt="">
                 </figure>
-                <p>Utiliza canales para organizar los distintos temas e hilos de conversación. Los canales son la manera en la cual se organiza el trabajo en Slack.</p>
+                <p>Utiliza canales para organizar los distintos temas e hilos de conversación. Los canales son la manera
+                    en la cual se organiza el trabajo en Slack.</p>
                 <figure>
                     <img src="img/slack2blog.png" alt="">
                 </figure>
@@ -87,18 +102,28 @@
                 <figure>
                     <img src="img/slack3blog.png" alt="">
                 </figure>
-                <p>Otra característica interesante de Slack es la posibilidad de integrar diferentes aplicaciones tales cómo:  DropBox, Github, Gmail. También Aplicaciones de productividad o de Steaming como Trello o Zoom, y hasta gestión de tickets de soporte como Zendesk. En este enlace puedes ver mas aplicaciones.</p>
+                <p>Otra característica interesante de Slack es la posibilidad de integrar diferentes aplicaciones tales
+                    cómo: DropBox, Github, Gmail. También Aplicaciones de productividad o de Steaming como Trello o
+                    Zoom, y hasta gestión de tickets de soporte como Zendesk. En este enlace puedes ver mas
+                    aplicaciones.</p>
                 <figure>
                     <img src="img/slack4blog.png" alt="">
                 </figure>
-                <p>Poder utilizar la potencia de estas herramientas de manera simple y desde la propia inerfáz de Slack, hace que, al trabajar con Slack, comienzas a disfrutar sus virtudes y a adoptarlo como una herramienta importante en los proyectos que integre el equipo.</p>
-                <p>Lo bueno de Slack es su simplicidad. Comienzas en un ambiente totalmente limpio y lo vas ampliando según tus verdaderas necesidades. Tienes un claro panorama de lo que se está hablando en el equipo de trabajo, pudiendo comunicarte de manera directa con algún miembro, en grupos o con todo el equipo. De esta manera, sacas provecho a una excelente distribución de la comunicación a través de accesibles y potentes canales donde fluye información ordenada y valiosa para el objetivo del equipo.</p>
-                <br>                
+                <p>Poder utilizar la potencia de estas herramientas de manera simple y desde la propia inerfáz de Slack,
+                    hace que, al trabajar con Slack, comienzas a disfrutar sus virtudes y a adoptarlo como una
+                    herramienta importante en los proyectos que integre el equipo.</p>
+                <p>Lo bueno de Slack es su simplicidad. Comienzas en un ambiente totalmente limpio y lo vas ampliando
+                    según tus verdaderas necesidades. Tienes un claro panorama de lo que se está hablando en el equipo
+                    de trabajo, pudiendo comunicarte de manera directa con algún miembro, en grupos o con todo el
+                    equipo. De esta manera, sacas provecho a una excelente distribución de la comunicación a través de
+                    accesibles y potentes canales donde fluye información ordenada y valiosa para el objetivo del
+                    equipo.</p>
+                <br>
                 <a href="https://slack.com/intl/es-ar/help">Más información</a>
-                <br>                
-                <br>                
+                <br>
+                <br>
                 <a href="https://slack.com/intl/es-ar/downloads/">Conseguir Slack</a>
-                <br>                
+                <br>
             </div>
             <br>
             <br>
@@ -153,18 +178,18 @@
                 <a href="curso.html" class="Tabs__button button button--blue">VER CURSO</a>
             </div>
             <div id="contenidoTab2" class="Tabs__tab-content">
-                    <h2 class="w400">
-                        Webpack<span class="icon-webpack"></span>
-                        Sass<span class="icon-sass"></span>
-                        Handlebars<span class="icon-hbs"></span>
-                    </h2>
+                <h2 class="w400">
+                    Webpack<span class="icon-webpack"></span>
+                    Sass<span class="icon-sass"></span>
+                    Handlebars<span class="icon-hbs"></span>
+                </h2>
 
-                    <ul>
-                        <li><span class="green">&#10003;</span> Sistema de bundling</li>
-                        <li><span class="green">&#10003;</span> Automatización de procesos</li>
-                        <li><span class="green">&#10003;</span> Preprocesadores CSS</li>
-                        <li><span class="green">&#10003;</span> Motores de plantillas</li>
-                    </ul>
+                <ul>
+                    <li><span class="green">&#10003;</span> Sistema de bundling</li>
+                    <li><span class="green">&#10003;</span> Automatización de procesos</li>
+                    <li><span class="green">&#10003;</span> Preprocesadores CSS</li>
+                    <li><span class="green">&#10003;</span> Motores de plantillas</li>
+                </ul>
 
             </div>
 
@@ -236,7 +261,7 @@
                 <li><a href="index.html#scrollLink1">cursos</a></li>
                 <li><a href="index.html#section1">blog</a></li>
             </ul>
-        </nav> 
+        </nav>
         <section class="Footer-social">
             <span class="icon-facebook"></span>
             <span class="icon-twitter"></span>
@@ -245,22 +270,25 @@
         </section>
     </footer>
 
-    <div class="Modal">    
+    <div class="Modal">
         <!-- Modal content -->
-        <div class="Modal-content">    
-            <form class="contact_form" action="https://getsimpleform.com/messages?form_api_token=e8ec1ae526c6c428f948668873550fb7" method="post" name="contact_form">
-                <input type='hidden' name='redirect_to' value='https://github.com/agustinpfs'/>
+        <div class="Modal-content">
+            <form class="contact_form"
+                action="https://getsimpleform.com/messages?form_api_token=e8ec1ae526c6c428f948668873550fb7"
+                method="post" name="contact_form">
+                <input type='hidden' name='redirect_to' value='https://github.com/agustinpfs' />
 
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
                 <input name="email" type="email" placeholder="Tu email" required>
                 <textarea name="msje" placeholder="Tu mensaje" required></textarea>
                 <button class="button button--form" type="submit" id="contact-submit">Enviar</button>
             </form>
-            <span class="Modal-close">&times;</span>    
+            <span class="Modal-close">&times;</span>
         </div>
-    
+
     </div>
     <script src="js/script.js"></script>
 
 </body>
+
 </html>
