--- a/welcome.html
+++ b/welcome.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167239185-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-167239185-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -16,13 +27,16 @@
         }
     </style>
 </head>
+
 <body>
     <main>
         <h1>BIENVENIDO al curso de Desarrollo Web de CursosIT</h1>
-        <p>Ya podés ingresar al Slack del curso y acceder al material de la primera clase a través de la siguiente invitación</p>
+        <p>Ya podés ingresar al Slack del curso y acceder al material de la primera clase a través de la siguiente
+            invitación</p>
         <p>invitación slack</p>
         <p>Para ver cómo funciona Slack mirá <a href="">este artículo</a></p>
         <p>Dudas? <a href="">Contactá</a></p>
     </main>
 </body>
+
 </html>
