--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -449,6 +449,10 @@
 
     </div>
     <script src="js/script.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+
+    <script src="js/captcha.js"></script>
+
 
 </body>
 
