--- a/blogVSCode.html
+++ b/blogVSCode.html
@@ -444,6 +444,10 @@
     </div>
     <script src="js/script.js"></script>
     <script id="dsq-count-scr" src="//EXAMPLE.disqus.com/count.js" async></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+
+    <script src="js/captcha.js"></script>
+
 </body>
 
 </html>
