--- a/curso.html
+++ b/curso.html
@@ -223,6 +223,9 @@
     
     </div>
     <script src="js/curso.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+
+    <script src="js/captcha.js"></script>
 
 
 </body>
