--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
                 <input name="email" type="email" placeholder="Tu email" required>
                 <textarea name="msje" placeholder="Tu mensaje" required></textarea>
-                <div class="g-recaptcha" data-sitekey="6LfE2vwUAAAAAAO_xQdh3Pn17vXsV2fY8QWjT_Kj" data-theme="dark"></div>
+                <!-- <div class="g-recaptcha" data-sitekey="6LfE2vwUAAAAAAO_xQdh3Pn17vXsV2fY8QWjT_Kj" data-theme="dark"></div> -->
                 <button class="button button--form" type="submit" id="contact-submit">Enviar</button>
             </form>
 
@@ -419,7 +419,7 @@
 
     </div>
     <script src="js/script.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js"></script> -->
 
     <script src="js/captcha.js"></script>
 
