--- a/blogSlack.html
+++ b/blogSlack.html
@@ -288,7 +288,7 @@
 
     </div>
     <script src="js/script.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js"></script> -->
 
     <script src="js/captcha.js"></script>
 
