--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
         <!-- Modal content -->
         <div class="Modal-content">
             <form class="contact_form"
-                action="https://usebasin.com/f/2cc397259408"
+                action="https://getsimpleform.com/messages?form_api_token=e8ec1ae526c6c428f948668873550fb7"
                 method="post" name="contact_form">
-                <!-- <input type='hidden' name='redirect_to' value='https://github.com/agustinpfs' /> -->
+                <input type='hidden' name='redirect_to' value='http://cursosit.com' />
 
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
                 <input name="email" type="email" placeholder="Tu email" required>
