--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
                     </div>
                 </div>
             </div>
-            <a class="Slides__prev" onclick="plusSlides(-1); gtag('event', 'click', {
+            <a class="Slides__prev" onclick="passSlides(-1); gtag('event', 'click', {
                 'event_category' : 'slider',
                 'event_label' : 'left'
                 });">&#10094;
             </a>
-            <a class="Slides__next" onclick="plusSlides(1); gtag('event', 'click', {
+            <a class="Slides__next" onclick="passSlides(1); gtag('event', 'click', {
                 'event_category' : 'slider',
                 'event_label' : 'right'
                 });">&#10095;
