--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                         <h3>JavaScript<span class="icon-javascript"></span></h3>
                     </div>
                     <div class="Slides__footer">
-                        <h4>Comienza 6 de mayo</h4>
-                        <a href="">INSCRIBIRSE</a>
+                        <h4>Comienza 7 de julio</h4>
+                        <a href="curso.html">INSCRIBIRSE</a>
                     </div>
                 </div>
             </div>
@@ -158,12 +158,12 @@
             <article class="Features__article">
                 <span class="icon-pencil"></span>
                 <h4>Aprendizaje</h4>
-                <p>Compromiso con el alumno para que aplique lo aprendido</p>
+                <p>Orientado a que el alumno aplique lo aprendido</p>
             </article>
             <article class="Features__article">
                 <span class="icon-folder-open"></span>
                 <h4>Proyectos</h4>
-                <p>Proyectos reales para incorporar al portfolio</p>
+                <p>Proyectos REALES para incorporar al portfolio</p>
             </article>
             <article class="Features__article">
                 <span class="icon-users"></span>
@@ -351,32 +351,23 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </section>
         <section class="Acordeon">
-            <h2>Equipo</h2>
-            <button id="activado" class="Acordeon-button">@twittername1</button>
+            <h2>Últimos videos</h2>
+            <button id="activado" class="Acordeon-button">Hola Mundo!</button>
             <div class="contenido">
-                <img src="img/perfil1.jpeg" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore,
-                    consequuntur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, debitis.</p>
+                <!-- <img src="img/perfil1.jpeg" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
 
-            <button class="Acordeon-button">@twittername2</button>
+            <button class="Acordeon-button">HTML</button>
             <div class="contenido">
-                <img src="img/perfil2.png" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Consequatur, eos.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, veniam.</p>
+                <!-- <img src="img/perfil2.png" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
 
-            <button class="Acordeon-button">@twittername3</button>
+            <button class="Acordeon-button">CSS</button>
             <div class="contenido">
-                <img src="img/perfil3.jpeg" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Voluptates, quas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, ipsum.</p>
+                <!-- <img src="img/perfil3.jpeg" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
         </section>
     </aside>
@@ -392,10 +383,18 @@
             </ul>
         </nav>
         <section class="Footer-social">
-            <span class="icon-facebook"></span>
-            <span class="icon-twitter"></span>
-            <span class="icon-github"></span>
-            <span class="icon-instagram"></span>
+            <a href="https://www.facebook.com/Cursos-IT-101125784951053" target="_blank" rel="noopener noreferrer">
+                <span class="icon-facebook"></span>
+            </a>
+            <a href="https://twitter.com/CursosIT1" target="_blank" rel="noopener noreferrer">
+                <span class="icon-twitter"></span>
+            </a>
+            <a href="https://github.com/Cursos-IT" target="_blank" rel="noopener noreferrer">
+                <span class="icon-github"></span>
+            </a>
+            <a href="https://www.instagram.com/cursosit_ok/" target="_blank" rel="noopener noreferrer">
+                <span class="icon-instagram"></span>
+            </a>
         </section>
     </footer>
 
