update welcome page

--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -78,16 +78,16 @@
                 <br>
                 <h4>Entorno de desarrollo: Visual Studio Code , Git y Github</h4>
                 <br>
-                <a href="">Ver página funcionando</a>
+                <a href="https://cursos-it.github.io/HolaMundo/" target="_blank" rel="noopener noreferrer">Ver página funcionando</a>
                 <br>
-                <a href="">Repositorio</a>
+                <a href="https://github.com/Cursos-IT/HolaMundo" target="_blank" rel="noopener noreferrer">Repositorio</a>
                 <br>
                 <br>
                 <h4>Requisitos:</h4>
                 <ul>
-                    <li>Tener instalado <a href="">Visual Studio Code</a> y <a href="">Git</a> (elegir opciones por
+                    <li>Tener instalado <a href="https://code.visualstudio.com/" target="_blank" rel="noopener noreferrer">Visual Studio Code</a> y <a href="https://git-scm.com/downloads" target="_blank" rel="noopener noreferrer">Git</a> (elegir opciones por
                         defecto).</li>
-                    <li>Abrir una cuenta en <a href="">Github.</a></li>
+                    <li>Abrir una cuenta en <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Github.</a></li>
                 </ul>
                 <br>
                 <br>
@@ -383,32 +383,23 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </section>
         <section class="Acordeon">
-            <h2>Equipo</h2>
-            <button id="activado" class="Acordeon-button">@twittername1</button>
+            <h2>Últimos videos</h2>
+            <button id="activado" class="Acordeon-button">Hola Mundo!</button>
             <div class="contenido">
-                <img src="img/perfil1.jpeg" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore,
-                    consequuntur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, debitis.</p>
+                <!-- <img src="img/perfil1.jpeg" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
 
-            <button class="Acordeon-button">@twittername2</button>
+            <button class="Acordeon-button">HTML</button>
             <div class="contenido">
-                <img src="img/perfil2.png" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Consequatur, eos.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, veniam.</p>
+                <!-- <img src="img/perfil2.png" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
 
-            <button class="Acordeon-button">@twittername3</button>
+            <button class="Acordeon-button">CSS</button>
             <div class="contenido">
-                <img src="img/perfil3.jpeg" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Voluptates, quas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, ipsum.</p>
+                <!-- <img src="img/perfil3.jpeg" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
         </section>
     </aside>
@@ -419,15 +410,23 @@
         <nav class="Footer-nav">
             <ul>
                 <li class="opencontact2"><a href="javascript:void(0)">contacto</a></li>
-                <li><a href="index.html#scrollLink1">cursos</a></li>
-                <li><a href="index.html#section1">blog</a></li>
+                <li><a href="#scrollLink1">cursos</a></li>
+                <li><a href="#section1">blog</a></li>
             </ul>
         </nav>
         <section class="Footer-social">
-            <span class="icon-facebook"></span>
-            <span class="icon-twitter"></span>
-            <span class="icon-github"></span>
-            <span class="icon-instagram"></span>
+            <a href="https://www.facebook.com/Cursos-IT-101125784951053" target="_blank" rel="noopener noreferrer">
+                <span class="icon-facebook"></span>
+            </a>
+            <a href="https://twitter.com/CursosIT1" target="_blank" rel="noopener noreferrer">
+                <span class="icon-twitter"></span>
+            </a>
+            <a href="https://github.com/Cursos-IT" target="_blank" rel="noopener noreferrer">
+                <span class="icon-github"></span>
+            </a>
+            <a href="https://www.instagram.com/cursosit_ok/" target="_blank" rel="noopener noreferrer">
+                <span class="icon-instagram"></span>
+            </a>
         </section>
     </footer>
 
