--- a/blogVSCode.html
+++ b/blogVSCode.html
@@ -279,14 +279,14 @@
                 </div>
                 <h3>Más atajos</h3>
                 <br>
-                <a href="https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf">Emmet</a>
+                <a href="https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf" target="_blank" rel="noopener noreferrer">Emmet</a>
                 <span class="nota">Emmet es una extensión que ya viene instalada y muchos atajos corresponden a esta
                     extensión.</span class="nota">
                 <br>
-                <a href="https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf">Visual Studio Code
+                <a href="https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf" target="_blank" rel="noopener noreferrer" >Visual Studio Code
                     macOS</a>
                 <br>
-                <a href="https://code.visualstudio.com/shortcuts/keyboard-shortcuts-windows.pdf">Visual Studio Code
+                <a href="https://code.visualstudio.com/shortcuts/keyboard-shortcuts-windows.pdf" target="_blank" rel="noopener noreferrer">Visual Studio Code
                     Windows</a>
                 <br>
             </div>
@@ -325,12 +325,14 @@
                 <li class="Tabs__tab" onclick="showContent(event, 'contenidoTab2')">Próximo</li>
                 <li class="Tabs__tab" onclick="showContent(event, 'contenidoTab3')">Futuros</li>
             </ul>
+
             <div id="contenidoTab1" class="Tabs__tab-content">
                 <h2 class="w400">
                     HTML<span class="icon-html5"></span>
                     CSS<span class="icon-css3"></span>
                     JavaScript<span class="icon-javascript"></span>
                 </h2>
+
                 <ul>
                     <li class="green">Además:</li>
                     <li><span class="green">&#10003;</span> Git-Github</li>
@@ -346,13 +348,16 @@
                     Sass<span class="icon-sass"></span>
                     Handlebars<span class="icon-hbs"></span>
                 </h2>
+
                 <ul>
                     <li><span class="green">&#10003;</span> Sistema de bundling</li>
                     <li><span class="green">&#10003;</span> Automatización de procesos</li>
                     <li><span class="green">&#10003;</span> Preprocesadores CSS</li>
                     <li><span class="green">&#10003;</span> Motores de plantillas</li>
                 </ul>
+
             </div>
+
             <div id="contenidoTab3" class="Tabs__tab-content">
                 <!-- <a href="http://"> -->
                 <!-- <h2 class="">
@@ -363,6 +368,7 @@
                         MongoDB
                         <span class="icon-mongodb"></span>
                     </h2> -->
+
                 <ul>
                     <li><span class="green">&#8226;</span> NodeJS, Express, MongoDB</li>
                     <li><span class="green">&#8226;</span> Progressive web app</li>
@@ -381,30 +387,23 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </section>
         <section class="Acordeon">
-            <h2>Equipo</h2>
-            <button id="activado" class="Acordeon-button">@twittername1</button>
+            <h2>Últimos videos</h2>
+            <button id="activado" class="Acordeon-button">Hola Mundo!</button>
             <div class="contenido">
-                <img src="img/perfil1.jpeg" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore,
-                    consequuntur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, debitis.</p>
+                <!-- <img src="img/perfil1.jpeg" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
-            <button class="Acordeon-button">@twittername2</button>
+
+            <button class="Acordeon-button">HTML</button>
             <div class="contenido">
-                <img src="img/perfil2.png" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Consequatur, eos.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, veniam.</p>
+                <!-- <img src="img/perfil2.png" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
-            <button class="Acordeon-button">@twittername3</button>
+
+            <button class="Acordeon-button">CSS</button>
             <div class="contenido">
-                <img src="img/perfil3.jpeg" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Voluptates, quas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, ipsum.</p>
+                <!-- <img src="img/perfil3.jpeg" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
         </section>
     </aside>
@@ -415,15 +414,23 @@
         <nav class="Footer-nav">
             <ul>
                 <li class="opencontact2"><a href="javascript:void(0)">contacto</a></li>
-                <li><a href="index.html#scrollLink1">cursos</a></li>
-                <li><a href="index.html#section1">blog</a></li>
+                <li><a href="#scrollLink1">cursos</a></li>
+                <li><a href="#section1">blog</a></li>
             </ul>
         </nav>
         <section class="Footer-social">
-            <span class="icon-facebook"></span>
-            <span class="icon-twitter"></span>
-            <span class="icon-github"></span>
-            <span class="icon-instagram"></span>
+            <a href="https://www.facebook.com/Cursos-IT-101125784951053" target="_blank" rel="noopener noreferrer">
+                <span class="icon-facebook"></span>
+            </a>
+            <a href="https://twitter.com/CursosIT1" target="_blank" rel="noopener noreferrer">
+                <span class="icon-twitter"></span>
+            </a>
+            <a href="https://github.com/Cursos-IT" target="_blank" rel="noopener noreferrer">
+                <span class="icon-github"></span>
+            </a>
+            <a href="https://www.instagram.com/cursosit_ok/" target="_blank" rel="noopener noreferrer">
+                <span class="icon-instagram"></span>
+            </a>
         </section>
     </footer>
     <div class="Modal">
