--- a/welcome.html
+++ b/welcome.html
@@ -14,28 +14,20 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        main {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin: auto;
-            width: 50%;
-        }
-    </style>
+    <title>Bienvenido</title>
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/welcome.css">
 </head>
 
 <body>
     <main>
         <h1>BIENVENIDO al curso de Desarrollo Web de CursosIT</h1>
-        <p>Ya podés ingresar al Slack del curso y acceder al material de la primera clase a través de la siguiente
+        <p>Ya podés ingresar al grupo de Slack y acceder al material de la primera clase a través de la siguiente
             invitación</p>
         <p>invitación slack</p>
-        <p>Para ver cómo funciona Slack mirá <a href="">este artículo</a></p>
+        <p>Para ver cómo funciona Slack mirá <a href="blogSlack.html">este artículo</a></p>
         <p>Dudas? <a href="">Contactá</a></p>
+        <img src="img/logo.png" alt="">
     </main>
 </body>
 
