--- a/blogSlack.html
+++ b/blogSlack.html
@@ -104,8 +104,8 @@
                 </figure>
                 <p>Otra característica interesante de Slack es la posibilidad de integrar diferentes aplicaciones tales
                     cómo: DropBox, Github, Gmail. También Aplicaciones de productividad o de Steaming como Trello o
-                    Zoom, y hasta gestión de tickets de soporte como Zendesk. En este enlace puedes ver mas
-                    aplicaciones.</p>
+                    Zoom, y hasta gestión de tickets de soporte como Zendesk. <a href="http://https://slack.com/intl/es-es/apps" target="_blank" rel="noopener noreferrer">En este enlace puedes ver mas
+                    aplicaciones.</a></p>
                 <figure>
                     <img src="img/slack4blog.png" alt="">
                 </figure>
@@ -119,10 +119,10 @@
                     accesibles y potentes canales donde fluye información ordenada y valiosa para el objetivo del
                     equipo.</p>
                 <br>
-                <a href="https://slack.com/intl/es-ar/help">Más información</a>
+                <a href="https://slack.com/intl/es-ar/help" target="_blank" rel="noopener noreferrer">Más información</a>
                 <br>
                 <br>
-                <a href="https://slack.com/intl/es-ar/downloads/">Conseguir Slack</a>
+                <a href="https://slack.com/intl/es-ar/downloads/" target="_blank" rel="noopener noreferrer">Conseguir Slack</a>
                 <br>
             </div>
             <br>
@@ -222,32 +222,23 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </section>
         <section class="Acordeon">
-            <h2>Equipo</h2>
-            <button id="activado" class="Acordeon-button">@twittername1</button>
+            <h2>Últimos videos</h2>
+            <button id="activado" class="Acordeon-button">Hola Mundo!</button>
             <div class="contenido">
-                <img src="img/perfil1.jpeg" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore,
-                    consequuntur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, debitis.</p>
+                <!-- <img src="img/perfil1.jpeg" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
 
-            <button class="Acordeon-button">@twittername2</button>
+            <button class="Acordeon-button">HTML</button>
             <div class="contenido">
-                <img src="img/perfil2.png" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Consequatur, eos.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, veniam.</p>
+                <!-- <img src="img/perfil2.png" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
 
-            <button class="Acordeon-button">@twittername3</button>
+            <button class="Acordeon-button">CSS</button>
             <div class="contenido">
-                <img src="img/perfil3.jpeg" alt="" width="150" height="200">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Voluptates, quas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, ipsum.</p>
+                <!-- <img src="img/perfil3.jpeg" alt="" width="150" height="200"> -->
+                <p>PROXIMAMENTE</p>
             </div>
         </section>
     </aside>
@@ -258,15 +249,23 @@
         <nav class="Footer-nav">
             <ul>
                 <li class="opencontact2"><a href="javascript:void(0)">contacto</a></li>
-                <li><a href="index.html#scrollLink1">cursos</a></li>
-                <li><a href="index.html#section1">blog</a></li>
+                <li><a href="#scrollLink1">cursos</a></li>
+                <li><a href="#section1">blog</a></li>
             </ul>
         </nav>
         <section class="Footer-social">
-            <span class="icon-facebook"></span>
-            <span class="icon-twitter"></span>
-            <span class="icon-github"></span>
-            <span class="icon-instagram"></span>
+            <a href="https://www.facebook.com/Cursos-IT-101125784951053" target="_blank" rel="noopener noreferrer">
+                <span class="icon-facebook"></span>
+            </a>
+            <a href="https://twitter.com/CursosIT1" target="_blank" rel="noopener noreferrer">
+                <span class="icon-twitter"></span>
+            </a>
+            <a href="https://github.com/Cursos-IT" target="_blank" rel="noopener noreferrer">
+                <span class="icon-github"></span>
+            </a>
+            <a href="https://www.instagram.com/cursosit_ok/" target="_blank" rel="noopener noreferrer">
+                <span class="icon-instagram"></span>
+            </a>
         </section>
     </footer>
 
