update cursos page

--- a/curso.html
+++ b/curso.html
@@ -60,6 +60,7 @@
                 <ul class="Info__general">
                     <li>&#10003; Html: Estructura, etiquetas, semántica.</li>
                     <li>&#10003; CSS: Maquetación, estilos gráficos, diseño adaptable.</li>
+                    <li>&#10003; Javascript: Interactividad.</li>
                     <li>&#10003; Google Analytics: Analítica web.</li>
                     <li>&#10003; Mercado pago: Cobros en el sitio web.</li>
                     <li>&#10003; Git / GitHub: Control de versiones. Publicación en Internet.</li>
